Fix nav links on Safari

--- a/assets/stylesheets/shared/header.css.scss
+++ b/assets/stylesheets/shared/header.css.scss
@@ -115,13 +115,10 @@
 
     a {
       padding: 1em;
+      display: block;
 
       &:hover {
         background: none;
-      }
-
-      &.active {
-        display: block;
       }
     }
   }
